Text truncated issue fixed for GPU hover

--- a/vtr-ui/src/app/components/widgets/widget-system-monitor/widget-system-monitor.component.scss
+++ b/vtr-ui/src/app/components/widgets/widget-system-monitor/widget-system-monitor.component.scss
@@ -151,12 +151,13 @@
 					display: inline-block;
 					z-index: 99;
 					top: -6rem;
-					min-width: 24rem;
+					min-width: 30rem;
 					left: 50%;
 					transform: translate(-50%);
 					opacity: 0;
 					transition: all 0.5s ease-in-out;
-					word-break: break-all;
+					white-space: pre-wrap;
+					word-break: keep-all;
 					pointer-events: none;
 					&::after {
 						content: "";
@@ -187,7 +188,7 @@
 							}
 						}
 						.gaming-tooltip {
-							min-width: 15rem;
+							min-width: 20rem;
 							left: 50%;
 							transform: translate(-50%);
 							top: -4rem;
@@ -201,7 +202,7 @@
 					}
 					&.gpu {
 						.gaming-tooltip {
-							min-width: 15rem;
+							min-width: 20rem;
 							left: 50%;
 							transform: translate(-50%);
 						}
